Go back to manual heap sizing